# ai-news-digest

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  PLAN.md  README.md  STATUS.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  digest.yml
scripts/: check_feeds.py  run_local.sh  score_summaries.py
src/ai_news_digest/: __init__.py  __main__.py  ai_processor.py  config.py  mcp_server.py  normalize.py  pipeline.py  render.py
src/ai_news_digest/delivery/: __init__.py  base.py  console.py  email_smtp.py  slack.py
src/ai_news_digest/eval/: __init__.py  constants.py  rules.py  scorer.py
src/ai_news_digest/providers/: __init__.py  base.py  claude.py  gemini.py
src/ai_news_digest/sources/: __init__.py  arxiv.py  base.py  hn.py  registry.py  rss.py
tests/: conftest.py  test_ai_processor.py  test_config.py  test_delivery_console.py  test_delivery_slack.py  test_delivery_stubs.py  test_eval_rules.py  test_feeds_live.py  test_mcp_server.py  test_normalize.py  test_pipeline.py  test_providers_claude.py  test_providers_factory.py  test_providers_gemini.py  test_sources_arxiv.py  test_sources_hn.py  test_sources_rss.py
tests/fixtures/: eval_samples.json  sample_rss.xml  sample_rss_no_date.xml
